# 38-cargo-xray-twin

./: README.md
backend/: CMakeLists.txt  volume_server.py
backend/include/: simulated_data_generator.h  volume_data.h  websocket_stream_server.h
backend/src/: main.cpp  websocket_stream_server.cpp
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AnalysisResultPanel.tsx  ContrabandAlertPanel.tsx  ControlPanel.tsx  TomographySliceViewer.tsx  VolumeViewer.tsx
frontend/src/services/: tomographyService.ts  websocketClient.ts
frontend/src/shaders/: raymarch.frag  raymarch.vert
frontend/src/types/: volume.ts
frontend/src/utils/: volumeUtils.ts
